--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="col-sm-6 col-lg-4 Python">
               <div class="portfolio-box rounded my-3">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-2.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="ajax/portfolio-ajax-project-2.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="kakao.html"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white font-weight-400">일자리 스크래퍼</h5>
                       <span class="text-light">Category</span> </div>
