--- a/airbnb.html
+++ b/airbnb.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="pdf/kakao.pdf" style="width: 95vw; height: 80vh;" target="_blank">
+    <iframe src="pdf/airbnb.pdf" style="width: 95vw; height: 80vh;" target="_blank">
     </iframe>
-    <a href="https://brave-jang.github.io/kokoa-clone/">
-        <p>프로젝트 보러가기</p>
-    </a>
 </body>
 </html>
