--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
   ============================ -->
   <header id="header" class="sticky-top"> 
     <!-- Navbar -->
-    <nav class="primary-menu navbar navbar-expand-lg bg-dark navbar-text-light border-bottom-0">
+    <nav class="primary-menu navbar navbar-expand-lg navbar-text-light border-bottom-0" style="background-color: #74D19D;">
       <div class="container-fluid position-relative h-100 flex-lg-column pl-3 px-lg-3 pt-lg-3 pb-lg-2"> 
         
         <!-- Logo --> 
         <a href="index.html" class="mb-lg-auto mt-lg-4">
-			<span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block">
-				<img class="img-fluid rounded-pill d-block" src="images/profile.jpg" title="I'm Yongki" alt="">
-			</span>
+			<div class="w-100 mb-3" style="display: flex; justify-content: center; height: 145px; width: 130px;">
+				<img src="images/profile1.jpg" title="I'm Yongki" alt="" style="border-radius: 100%; height: 140px; width: 120px;">
+			</div>
 			<h1 class="text-5 text-white text-center mb-0 d-lg-block">YONGKI JANG</h1>
+      <h1 class="text-2 text-white text-center mb-0 mt-1 d-lg-block">SERVER DEVELOPER & Django</h1>
         </a> 
         <!-- Logo End -->
         
@@ -288,10 +289,10 @@
             <div class="col-sm-6 col-lg-4 Python">
               <div class="portfolio-box rounded my-3">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-2.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="kakao.html"></a>
+                  <div class="portfolio-overlay"> <a class="stretched-link" href="work.html"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white font-weight-400">일자리 스크래퍼</h5>
-                      <span class="text-light">Category</span> </div>
+                      <span class="text-light">Python/Flask</span> </div>
                   </div>
                 </div>
               </div>
@@ -299,10 +300,10 @@
             <div class="col-sm-6 col-lg-4 artwork Django">
               <div class="portfolio-box rounded my-3">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-3.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="ajax/portfolio-ajax-project-3.html"></a>
+                  <div class="portfolio-overlay"> <a class="stretched-link" href="airbnb.html"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white font-weight-400">Project Titl23</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white font-weight-400">에어비엔비 클론</h5>
+                      <span class="text-light">Django</span> </div>
                   </div>
                 </div>
               </div>
@@ -310,10 +311,10 @@
             <div class="col-sm-6 col-lg-4 artwork brand Django">
               <div class="portfolio-box rounded my-3">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-4.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="ajax/portfolio-ajax-project-4.html"></a>
+                  <div class="portfolio-overlay"> <a class="stretched-link" href="insta.html"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white font-weight-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white font-weight-400">인스타 클론</h5>
+                      <span class="text-light">Django</span> </div>
                   </div>
                 </div>
               </div>
@@ -321,10 +322,10 @@
             <div class="col-sm-6 col-lg-4 Django">
               <div class="portfolio-box rounded my-3">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-5.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="ajax/portfolio-ajax-project-5.html"></a>
+                  <div class="portfolio-overlay"> <a class="stretched-link" href="news.html"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white font-weight-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white font-weight-400">news scrap</h5>
+                      <span class="text-light">Django</span> </div>
                   </div>
                 </div>
               </div>
@@ -332,10 +333,10 @@
             <div class="col-sm-6 col-lg-4 React">
               <div class="portfolio-box rounded my-3">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-6.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="ajax/portfolio-ajax-project-6.html"></a>
+                  <div class="portfolio-overlay"> <a class="stretched-link" href="movie.html"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white font-weight-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white font-weight-400">movie app</h5>
+                      <span class="text-light">React</span> </div>
                   </div>
                 </div>
               </div>
