--- a/movie.html
+++ b/movie.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="pdf/kakao.pdf" style="width: 95vw; height: 80vh;" target="_blank">
+    <iframe src="pdf/movie.pdf" style="width: 95vw; height: 80vh;" target="_blank">
     </iframe>
-    <a href="https://brave-jang.github.io/kokoa-clone/">
+    <a href="https://hungry-volhard-3ba30b.netlify.app">
         <p>프로젝트 보러가기</p>
     </a>
 </body>
