--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-<title>장용기 - Personal Portfolio Template</title>
+<title>Yongki jang</title>
 <meta name="description" content="Simone is responsive bootstrap 4 one page personal portfolio html template.">
 <meta name="author" content="harnishdesign.net">
 
@@ -68,7 +68,7 @@
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
           </ul>
         </div>
-        <ul class="social-icons social-icons-muted social-icons-sm mt-lg-auto ml-auto ml-lg-0 mb-n1 d-flex">
+        <ul class="social-icons social-icons-md mt-lg-auto ml-auto ml-lg-0 mb-n1 d-flex">
           <li class="social-icons-github"><a data-toggle="tooltip" href="https://brave-jang93.tistory.com/" target="_blank" title="" data-original-title="tistory"><i class="fab fa-blogger"></i></a></li>
           <li class="social-icons-github"><a data-toggle="tooltip" href="https://github.com/brave-jang" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
         </ul>
@@ -118,23 +118,28 @@
           <p class="text-9 text-dark font-weight-600 position-absolute w-100 align-self-center line-height-4 mb-0">Know Me More<span class="heading-separator-line border-bottom border-3 border-primary position-abolute d-block mx-auto"></span> </p>
         </div>
         <!-- Heading end-->
-        
+
         <div class="row">
           <div class="col-lg-8 text-center text-lg-left">
-            <h2 class="text-7 font-weight-600 mb-3">"조금은 늦은 나이에 <span class="text-primary">새로운 꿈</span>을 꾸고 있습니다."</h2>
-            <p>네트워크 엔지니어로서 2년 정도 근무 후 개발에 대한 새로운 꿈을 꾸게 되었습니다. 평소 사회 문제에 관심이 많아 뉴스를 자주 보는 편입니다. 여러 뉴스를 접하며 우리가 사는 세상이 변해가는 것을 보는 것이 재미있기 때문입니다. 또한 정치, 과학 기술의 발전이 우리가 사는 사회를 어떻게 변화시킬지 상상해보는 것도 좋아합니다.</p>
-            <p>여러 사람과 함께 좋은 뉴스 및 콘텐츠들을 공유하고 싶은 생각이 들었고 해당 서비스를 만들기 위해 직접 개발하기로 하였습니다. 아직은 많이 부족해서 몇 가지 기능이 없지만, 꾸준히 공부하여 사용자들이 원하는 서비스와 제가 상상하고 있는 서비스의 모습을 구축하기 위해 노력하고 있습니다.</p>
+            <h2 class="text-7 font-weight-600 mb-3">"<span class="text-primary">네트워크 엔지니어</span>로서의 2년"</h2>
+            <p>네트워크 엔지니어로서 2년 3개월을 근무하는 동안 많은 네트워크 장비들을 직접 세팅하며 직접 구축하고 유지,보수 하였습니다. 프로젝트가 시작되면 네트워크 망을 구성하기 위해 여러 회사에서 투입된 엔지니어분들과 많은 소통을 하였는데, 장비 제조사마다 특성이 달라 여러가지 사이드 이펙트를 고려하여야 했기 때문입니다.</p>
+            <p>장비가 고장 났을 경우 로그를 분석하여 고객에게 보고서를 제출하여야 했습니다. 로그를 분석하면서 자연스럽게 네트워크 장비가 어떤 로직으로 구성이 되어있고 어떻게 개발이 되었는지 궁금하게 되었습니다. 이 궁금증은 퇴근 후 자연스럽게 개발공부를 하게 만들었던 것 같습니다.</p>
           </div>
-          <div class="col-lg-4 mt-5 mt-lg-0">
+          <div class="col-lg-4 mt-4">
             <div class="pl-4">
               <ul class="list-style-2">
                 <li class=""><span class="font-weight-600 mr-2">Name:</span>장용기</li>
-                <li class=""><span class="font-weight-600 mr-2">Email:</span><a href="mailto:wkdrmfmt@gmail.com">wkdrmfmt@gmail.com</a></li>
+                <li class=""><span class="font-weight-600 mr-2">Email:</span><a href="mailto:wkdrmfmt@naver.com">wkdrmfmt@naver.com</a></li>
                 <li class=""><span class="font-weight-600 mr-2">Age:</span>29</li>
                 <li class="border-0"><span class="font-weight-600 mr-2">From:</span>인천광역시 서구 검단로 529번길</li>
               </ul>
           </div>
         </div>
+          <div class="col-lg-8 text-center text-lg-left mt-5">
+            <h2 class="text-7 font-weight-600 mb-3">"조금은 늦은 나이에 <span class="text-primary">새로운 꿈</span>을 꾸고 있습니다."</h2>
+            <p>퇴근 후 개발공부 하던 중 어플리케이션을 직접 만들어 지인들과 공유하고 싶다는 생각이 들었고 자연스럽게 파이썬과 Django의 세계로 빠져들게 되었습니다. 어떤 어플리케이션을 만들지 고민하던 중 단톡방에서 주식을 하는 지인들과 서로 좋은 뉴스를 공유하던 것이 떠올랐습니다.</p>
+            <p>웹 사이트를 하나 만들어 여러 사람들과 좋은 뉴스를 공유하고 싶은 욕심이 생겼고 퇴사 후 본격적으로 개발 공부를 시작하였습니다. 2021년 3월 가까스로 초기버젼의 웹사이트가 만들어졌고 주변 지인들과 공유하며 여러 기능을 추가할 계획입니다.</p>
+          </div>
       </div>
     </section>
     <!-- About end --> 
@@ -221,7 +226,7 @@
               <p class="badge badge-primary text-2 font-weight-400">2012 - 2018</p>
               <h3 class="text-5">세명대학교</h3>
               <p class="text-danger">정보통신학부</p>
-              <p class="mb-0">대학교에서 프로그래밍, 네트워크, 운영체제, 데이터베이스 등등 컴퓨터 공학에 대한 여러가지 기본 이론을 학습하였습니다.</p>
+              <p class="mb-0">프로그래밍, 네트워크, 운영체제, 데이터베이스 등등 컴퓨터 공학에 대한 여러가지 기본 이론을 학습하였습니다.</p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
               <p class="badge badge-primary text-2 font-weight-400">2018.5.25</p>
@@ -364,7 +369,7 @@
             <p class="text-3 mb-4">인천광역시 서구<br>
               검단로 529번길<br></p>
             <p class="text-3 mb-1"><span class="text-primary text-4 mr-2"><i class="fas fa-phone"></i></span>010-9189-3049</p>
-            <p class="text-3 mb-4"><span class="text-primary text-4 mr-2"><i class="fas fa-envelope"></i></span>wkdrmfmt@gmail.com</p>
+            <p class="text-3 mb-4"><span class="text-primary text-4 mr-2"><i class="fas fa-envelope"></i></span>wkdrmfmt@naver.com</p>
             <h2 class="mb-3 text-5 text-uppercase">Follow Me</h2>
             <ul class="social-icons ml-md-n2 justify-content-center justify-content-md-start">
               <li class="social-icons-github"><a data-toggle="tooltip" href="https://brave-jang93.tistory.com/" target="_blank" title="" data-original-title="tistory"><i class="fab fa-blogger"></i></a></li>
@@ -401,25 +406,6 @@
     
   </div>
   <!-- Content end --> 
-  
-  <!-- Footer
-  ============================================= -->
-  <footer id="footer" class="section">
-    <div class="container px-lg-5">
-      <div class="row">
-        <div class="col-lg-6 text-center text-lg-left">
-          <p class="mb-3 mb-lg-0">Copyright © 2020 <a href="#">Simone</a>. All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6">
-          <ul class="nav nav-separator justify-content-center justify-content-lg-end">
-            <li class="nav-item"> <a class="nav-link" data-toggle="modal" data-target="#terms-policy" href="#">Terms & Policy</a></li>
-            <li class="nav-item"> <a class="nav-link" data-toggle="modal" data-target="#disclaimer" href="#">Disclaimer</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- Footer end --> 
   
 </div>
 <!-- Document Wrapper end --> 
