--- a/kakao.html
+++ b/kakao.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <iframe src="pdf/kakao.pdf" style="width: 95vw; height: 80vh;" target="_blank">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <title>Yongki jang</title>
+  </head>
+  <body>
+    <iframe
+      src="pdf/kakao.pdf"
+      style="width: 95vw; height: 80vh"
+      target="_blank"
+    >
     </iframe>
     <a href="https://brave-jang.github.io/kokoa-clone/">
-        <p>프로젝트 보러가기</p>
+      <p>프로젝트 보러가기</p>
     </a>
-</body>
+    <a href="https://github.com/brave-jang/kokoa-clone">
+      <p>코드 보러가기</p>
+    </a>
+  </body>
 </html>
