--- a/work.html
+++ b/work.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <iframe src="pdf/work.pdf" style="width: 95vw; height: 80vh;" target="_blank">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <title>Yongki jang</title>
+  </head>
+  <body>
+    <iframe
+      src="pdf/work.pdf"
+      style="width: 95vw; height: 80vh"
+      target="_blank"
+    >
     </iframe>
-</body>
+    <a href="https://github.com/brave-jang/job-scraper">
+      <p>코드 보러가기</p>
+    </a>
+  </body>
 </html>
