--- a/index.html
+++ b/index.html
@@ -161,36 +161,36 @@
               <div class="col-md-6">
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fab fa-html5"></i> </div>
-                  <h3>HTML</h3>
-                  <p class="mb-0">HTML의 다양한 태그들을 사용하며 카카오 클론 코딩과 여러 프로젝트들을 구성하였습니다.</p>
+                  <h3>HTML/CSS</h3>
+                  <p class="mb-0">HTML의 다양한 태그들과 CSS를 통하여 원하는 위치에 원하는 디자인을 꾸밀 수 있습니다.</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="featured-box style-3 mb-5">
-                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fab fa-css3"></i> </div>
-                  <h3>CSS</h3>
-                  <p class="mb-0">display 및 포지션 기능을 통해 원하는 구성을 할 수 있습니다. Transition 및 Animation 기능을 통해 화면을 동적으로 만들 수 있습니다.</p>
+                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fab fa-python"></i> </div>
+                  <h3>파이썬</h3>
+                  <p class="mb-0">파이썬의 기초 문법과 다양한 라이브러리를 사용할 줄 압니다. BeautifulSoup4를 통하여 웹 사이트를 스크래핑 하는 것에 흥미를 느끼고 있습니다.</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="featured-box style-3 mb-5">
-                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fab fa-python"></i></div>
-                  <h3>Python</h3>
-                  <p class="mb-0">BeautifulSoup 라이브러리를 활용하여 여러 구직 사이트에서 원하는 직업에 따라 여러 데이터들을 스크래핑 해봤습니다.</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="featured-box style-3 mb-5">
-                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-pencil-ruler"></i> </div>
+                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/django.png"  style="overflow: hidden; "/> </div>
                   <h3>Django</h3>
-                  <p class="mb-0">CRUD 기능을 기초로 Airbnb 클론, 인스타그램 클론 및 개인 홈페이지를 구축하였습니다.</p>
+                  <p class="mb-0">Airbnb, 인스타그램 클론 등을 통하여 Django의 기능에 대해 학습하였습니다.</p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="featured-box style-3 mb-5">
+                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/django-rest.png"  style="overflow: hidden;"/></div>
+                  <h3>Django Rest Framework</h3>
+                  <p class="mb-0">개인 홈페이지를 만들 때, Django Rest Framework를 사용하여 백엔드 부분을 사용했습니다.</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fab fa-react"></i> </div>
                   <h3>React</h3>
-                  <p class="mb-0">themoviedb라는 홈페이지에서 제공하는 API로 영화 및 드라마 웹서비스의 프론트엔드 부분을 구축하였습니다.</p>
+                  <p class="mb-0">themoviedb라는 홈페이지에서 제공하는 API로 Movie App을 제작하였으며, 개인 홈페이지도 리엑트로 제작하였습니다.</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -276,6 +276,7 @@
           <li class="nav-item"> <a data-filter=".Python" href="" class="nav-link">Python/Flask</a></li>
           <li class="nav-item"> <a data-filter=".Django" href="" class="nav-link">Django</a></li>
           <li class="nav-item"> <a data-filter=".React" href="" class="nav-link">React</a></li>
+          <li class="nav-item"> <a data-filter=".drf" href="" class="nav-link">Django-Rest-Framework</a></li>
         </ul>
         <!-- Filter Menu end -->
         <div class="portfolio popup-ajax-gallery">
@@ -324,17 +325,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-lg-4 Django">
-              <div class="portfolio-box rounded my-3">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-5.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="stretched-link" href="news.html"></a>
-                    <div class="portfolio-overlay-details">
-                      <h5 class="text-white font-weight-400">news scrap</h5>
-                      <span class="text-light">Django</span> </div>
-                  </div>
-                </div>
-              </div>
-            </div>
             <div class="col-sm-6 col-lg-4 React">
               <div class="portfolio-box rounded my-3">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-6.jpg" alt="">
@@ -342,6 +332,17 @@
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white font-weight-400">movie app</h5>
                       <span class="text-light">React</span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 drf">
+              <div class="portfolio-box rounded my-3">
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/projects/project-5.jpg" alt="">
+                  <div class="portfolio-overlay"> <a class="stretched-link" href="news.html"></a>
+                    <div class="portfolio-overlay-details">
+                      <h5 class="text-white font-weight-400">news scrap</h5>
+                      <span class="text-light">Django</span> </div>
                   </div>
                 </div>
               </div>
