--- a/news.html
+++ b/news.html
@@ -13,11 +13,14 @@
       target="_blank"
     >
     </iframe>
-    <a href="https://first-web-qhbrm.run.goorm.io/">
+    <a href="https://goodnews.run.goorm.io/">
       <p>프로젝트 보러가기</p>
     </a>
-    <a href="https://github.com/brave-jang/first_website">
-      <p>코드 보러가기(초기 버전)</p>
+    <a href="https://github.com/brave-jang/news_scrap_react">
+      <p>코드 보러가기(리엑트)</p>
+    </a>
+    <a href="https://github.com/brave-jang/news_scrap_api">
+      <p>코드 보러가기(Django)</p>
     </a>
   </body>
 </html>
